...
                                        <rect key="frame" x="0.0" y="201" width="600" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="aay-tX-Wbr" id="YIx-W5-VeP">
                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Audio Announcements" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="stA-wr-88J">
                                                    <rect key="frame" x="8" y="12" width="210" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="s4T-rN-tym">
...
                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cHS-mo-Ldf">
                                                    <rect key="frame" x="543" y="6" width="51" height="31"/>
                                                    <connections>
                                                        <action selector="audioZoneSwitchChanged:" destination="PJP-Ey-dyv" eventType="valueChanged" id="T1E-Yu-pCG"/>
                                                    </connections>
                                                </switch>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Zone Changes" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l3j-i1-K1C">
                                                    <rect key="frame" x="8" y="11" width="122" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
...
                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MEW-9t-bcv">
                                                    <rect key="frame" x="543" y="6" width="51" height="31"/>
                                                    <connections>
                                                        <action selector="healthkitSwitchChanged:" destination="PJP-Ey-dyv" eventType="valueChanged" id="lK3-z4-R7i"/>
                                                    </connections>
                                                </switch>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Save to HealthKit" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oFm-73-M9d">
                                                    <rect key="frame" x="8" y="12" width="153" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
...
                            <constraint firstItem="nb7-oA-D7p" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="39" id="oMd-b8-Qud"/>
                            <constraint firstItem="JhH-Mn-1qp" firstAttribute="top" secondItem="kIR-bf-mzj" secondAttribute="bottom" constant="39" id="rCO-gv-bZf"/>
                            <constraint firstAttribute="centerX" secondItem="qgC-tJ-rcO" secondAttribute="centerX" constant="-0.5" id="wZk-cb-U4C"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="3AS-ev-ien">
                        <barButtonItem key="rightBarButtonItem" tag="1" title="Settings" style="plain" id="WLW-4M-xbF">
                            <color key="tintColor" red="0.82352941176470584" green="0.25490196078431371" blue="0.12156862745098039" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <connections>
                                <segue destination="PJP-Ey-dyv" kind="show" identifier="showSettings" id="j7g-9c-jNc"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
