//
//  PulserUITests.swift
//  PulserUITests
//
//  Created by David McQueen on 26/09/2015.
//  Copyright © 2015 David McQueen. All rights reserved.
//

import XCTest

class PulserUITests: XCTestCase {
    

    override func setUp() {
        super.setUp()
        
        var userSettings = loadUserSettings();
        userSettings.AnnounceAudio = false;
        
        saveUserSettings(userSettings);
        
//        saveUserSettings();
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
        
        
        
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testAudioSwitchTurnOn() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.

        let app = XCUIApplication()
        app.navigationBars["Pulser.View"].buttons["Settings"].tap()
        
        let tablesQuery = app.tables
        //The audio section isnt yet expanded
//        XCTAssertEqual(tablesQuery.cells.count, 8);
        
        tablesQuery.switches["Audio Announcements"].tap()
//        tablesQuery.switches["Zone Changes"].tap()
//        tablesQuery.childrenMatchingType(.Cell).elementBoundByIndex(2).sliders["67%"].swipeLeft()
        
        //The audio section has been expanded
//        XCTAssertEqual(tablesQuery.cells.count, 10);
        
    }
    
    
    func testAudioSwitchTurnOff(){
        
        
        let app = XCUIApplication()
        let tablesQuery = app.tables
        app.navigationBars["Pulser.View"].buttons["Settings"].tap()
//        XCTAssertEqual(tablesQuery.cells.count, 10);
        app.tables.switches["Save to HealthKit"].tap()
//        XCTAssertEqual(tablesQuery.cells.count, 9);
        
    }
    
}
